--- a/style/css/style.css
+++ b/style/css/style.css
@@ -1,4 +1,6 @@
 div {
   background-color: red;
   display: flex;
-  flex-direction: row; }
+  flex-direction: row;
+  justify-content: center;
+  border: 5px solid black; }
